# capstone_project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build-and-test.yml  cmake.yml  pre-commit.yml
Testing/: TAG
Testing/20240611-0956/: Test.xml
cmake/: Docs.cmake
plugin/: CMakeLists.txt
plugin/include/YourPluginName/: AudioBuffer.h  LowpassHighpassFilter.h  NetworkingThread.h  PluginEditor.h  PluginProcessor.h
plugin/source/: AudioBuffer.cpp  LowpassHighpassFilter.cpp  NetworkingThread.cpp  PluginEditor.cpp  PluginProcessor.cpp
src/: CMakeLists.txt
src/audioBuffer/: AudioBuffer.cpp  AudioBuffer.h  CMakeLists.txt
src/connectionManager/: CMakeLists.txt  ConnectionManagerThread.cpp  ConnectionManagerThread.h  Server.cpp  Server.h
src/consumer/: CMakeLists.txt  ConsumerThread.cpp  ConsumerThread.h
src/core/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/functional/: audioBuffer.cpp  connectDAWs.cpp  connectionManagerThread.cpp  consumerThread.cpp  logger.cpp  messenger.cpp  providerThread.cpp  ringBuffer.cpp  tcpHost.cpp  udpHost.cpp
src/functional/include/ConnectDAWs/: audioBuffer.h  connectDAWs.h  connectionManagerThread.h  consumerThread.h  logger.h  messenger.h  providerThread.h  ringBuffer.h  tcpHost.h  udpHost.h
src/host/: CMakeLists.txt  Host.cpp  Host.h
src/networkThread/: CMakeLists.txt  NetworkThread.cpp  NetworkThread.h
src/networking/: CMakeLists.txt  Client.h  NetworkingThread.cpp  Server.cpp  Server.h
src/networkingThread/: CMakeLists.txt  NetworkingThread.cpp
src/plugin/: CMakeLists.txt
src/plugin/include/ConnectDAWs/: audioBuffer.h  connectDAWs.h  connectionManagerThread.h  consumerThread.h  logger.h  mainPluginEditor.h  mainPluginProcessor.h  messenger.h  pluginEditor.h  pluginProcessor.h  providerThread.h  tcpHost.h  udpHost.h
src/plugin/src/: audioBuffer.cpp  connectDAWs.cpp  connectionManagerThread.cpp  consumerThread.cpp  logger.cpp  mainPluginEditor.cpp  mainPluginProcessor.cpp  messenger.cpp  pluginEditor.cpp  pluginProcessor.cpp  providerThread.cpp  tcpHost.cpp  udpHost.cpp
src/proto/: datagram.proto
src/protobufMessages/: CMakeLists.txt  datagram.proto
src/provider/: CMakeLists.txt  ProviderThread.cpp  ProviderThread.h
src/tcpHost/: CMakeLists.txt  tcpHost.cpp  tcpHost.h
src/ui/: connectDAWsComponent.cpp  errorComponent.cpp  inConnectionComponent.cpp  mainComponent.cpp  startConnectionComponent.cpp
src/ui/include/ConnectDAWsComponents/: connectDAWsComponent.h  errorComponent.h  inConnectionComponent.h  mainComponent.h  startConnectionComponent.h
src/utility/: CMakeLists.txt
src/utility/benchmark/: benchmark.cpp  benchmark.h  networkLatency.cpp
src/utility/logger/: logger.cpp  logger.h
test/: CMakeLists.txt  main.cpp  test_AudioBuffer.cpp  test_ConnectionManager.cpp  test_ConnectionManagerThread.cpp  test_ConsumerThread.cpp  test_Host.cpp  test_Integration.cpp  test_NetworkThread.cpp  test_NetworkingThread.cpp  test_ProviderThread.cpp  test_Server.cpp  test_TcpHost.cpp
test/helpers/: CMakeLists.txt  sharedValues.cpp  sharedValues.h
test/integrationTests/: CMakeLists.txt  integrationTest_ConnectionManagerThread.cpp  integrationTest_Host_AudioBuffer.cpp  integrationTest_Provider_Consumer.cpp
tests/: CMakeLists.txt
tests/helpers/: CMakeLists.txt  sharedValues.cpp  sharedValues.h
tests/integrationTests/: CMakeLists.txt  integrationTest_Benchmark.cpp  integrationTest_ConnectionManagerThread.cpp  integrationTest_Host_AudioBuffer.cpp  integrationTest_Provider_Consumer.cpp
tests/unitTests/: CMakeLists.txt  test_AudioBuffer.cpp  test_Benchmark.cpp  test_ConnectDAWs.cpp  test_ConnectionManagerThread.cpp  test_ConsumerThread.cpp  test_ProviderThread.cpp  test_RingBuffer.cpp  test_TcpHost.cpp  test_UdpHost.cpp
